--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ body, html {
 nav {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 50px 50px 50px;
-  margin: 14px;
+  grid-template-rows: 50px 50px;
+  margin: 0px 6px 0px 6px;
 }
 
 nav li img {
@@ -29,7 +29,6 @@ nav li img {
   border-radius: 100%;
   height: 120px;
   width: 120px;
-  margin: 10px 10px 55px 0px;
 }
 
 nav ul {
@@ -52,6 +51,13 @@ nav ul {
   background: linear-gradient(to bottom, #66574a, #c5b9af);
 }
 
+.color {
+  grid-row: 3 / 4;
+  grid-column: 1 / 7;
+  height: 10%;
+  background-color: blue;
+}
+
 nav ul li a {
   color: white;
   text-decoration: none;
@@ -64,11 +70,9 @@ nav ul li a:hover {
 .quotes ul {
   font-family: 'Gloria Hallelujah', cursive;
   list-style: none;
-  padding: 0;
   margin: 0px 14px 0px 14px;
   display: flex;
   flex-direction: column;
-  background-image: url(images/flowers.jpg);
 }
 
 .quotes li, .skills {
@@ -87,13 +91,23 @@ nav ul li a:hover {
   border: 1px solid #FFDAB9;
 }
 
+.quotes {
+  background-image: url(images/flowers.jpg);
+  margin: 8px 14px 8px 14px;
+}
+
+.about {
+  background-image: url(images/sea.jpg);
+  margin: 8px 14px 8px 14px;
+}
+
 .about section {
   background-color: #FFDAB9;
   border: 1px solid #66574A;
   border-radius: 100%;
   height: 350px;
   width: 350px;
-  margin: 2em;
+  margin: 5px 100px 5px 100px;
 }
 
 .about section:hover {
@@ -137,8 +151,8 @@ nav ul li a:hover {
   font-family: 'Patua One', cursive;
   text-align: center;
   padding: 10px;
-  background-color: #c5b9af;
-  margin: 20px;
+  background-image: url(images/flowers.jpg);
+  margin: 8px 14px 8px 14px;
 }
 
 .recap .month {
@@ -176,13 +190,14 @@ nav ul li a:hover {
 }
 
 .projects ul {
-  margin: 20px;
+  margin: 8px 14px 8px 14px;
   list-style: none;
-  padding: 0px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   font-family: 'Patua One', cursive;
+  background-image: url(images/flowers.jpg);
 }
 
 .projects li {
@@ -289,7 +304,7 @@ nav ul li a:hover {
 .footer {
   display: grid;
   grid-template-rows: 50px;
-  margin: 14px;
+  margin: 0px 6px 0px 6px;
 }
 
 .footer ul {
